@@ -1,3 +1,8 @@
+2000-08-14  Tim Jenness  <timj@jach.hawaii.edu>
+
+	* Calib/SCUBA.pm: Add support for wideband filter secondary
+	calibrator fluxes.
+
 2000-07-27  Tim Jenness  <timj@jach.hawaii.edu>
 
 	* Calib/SCUBA.pm (tau): Add caching
